# SpaceShooter

./: CMakeLists.txt  LICENSE  README.md  main.cpp
SpaceShooterEngine/: CMakeLists.txt
SpaceShooterEngine/include/audio/: AudioManager.h
SpaceShooterEngine/include/framework/: Actor.h  Application.h  AssetsManager.h  BackgroundLayer.h  Core.h  Delegate.h  MathUtility.h  Object.h  PhysicsSystem.h  ScrollingBackground.h  TimerManager.h  Transform.h  World.h
SpaceShooterEngine/include/gameplay/: GameStage.h
SpaceShooterEngine/include/vfx/: Explosion.h  Particle.h
SpaceShooterEngine/include/widgets/: Button.h  HUD.h  ImageWidget.h  ProgressBar.h  TextWidget.h  Widget.h
SpaceShooterEngine/src/: EntryPoint.cpp
SpaceShooterEngine/src/audio/: AudioManager.cpp
SpaceShooterEngine/src/framework/: Actor.cpp  Application.cpp  AssetsManager.cpp  BackgroundLayer.cpp  MathUtility.cpp  Object.cpp  PhysicsSystem.cpp  ScrollingBackground.cpp  TimerManager.cpp  Transform.cpp  World.cpp
SpaceShooterEngine/src/gameplay/: GameStage.cpp
SpaceShooterEngine/src/vfx/: Explosion.cpp  Particle.cpp
SpaceShooterEngine/src/widgets/: Button.cpp  HUD.cpp  ImageWidget.cpp  ProgressBar.cpp  TextWidget.cpp
SpaceShooterGame/: CMakeLists.txt
SpaceShooterGame/include/enemy/: Boss.h  BossStage.h  ChaosStage.h  EnemySpaceShip.h  Hexagon.h  HexagonStage.h  TweenBlade.h  TweenBladeStage.h  UFO.h  UFOStage.h  Vanguard.h  VanguardStage.h
SpaceShooterGame/include/gameFramework/: GameApplication.h
SpaceShooterGame/include/gameplay/: HealthComponent.h  WaitStage.h
SpaceShooterGame/include/levels/: GameLevelOne.h  MainMenu.h
SpaceShooterGame/include/player/: Player.h  PlayerManager.h  PlayerSpaceShip.h  Reward.h
SpaceShooterGame/include/spaceShip/: SpaceShip.h
SpaceShooterGame/include/weapon/: Bullet.h  BulletShooter.h  FrontalWiper.h  Shooter.h  ThreeWayShooter.h
SpaceShooterGame/include/widgets/: GameHUD.h  MainMenuHUD.h
SpaceShooterGame/src/enemy/: Boss.cpp  BossStage.cpp  ChaosStage.cpp  EnemySpaceShip.cpp  Hexagon.cpp  HexagonStage.cpp  TweenBaldeStage.cpp  TweenBlade.cpp  TweenBladeStage.cpp  UFO.cpp  UFOStage.cpp  Vanguard.cpp  VanguardStage.cpp
SpaceShooterGame/src/gameFramework/: GameApplication.cpp
SpaceShooterGame/src/gameplay/: HealthComponent.cpp  WaitStage.cpp
SpaceShooterGame/src/levels/: GameLevelOne.cpp  MainMenu.cpp
SpaceShooterGame/src/player/: Player.cpp  PlayerManager.cpp  PlayerSpaceShip.cpp  Reward.cpp
SpaceShooterGame/src/spaceShip/: SpaceShip.cpp
SpaceShooterGame/src/weapon/: Bullet.cpp  BulletShooter.cpp  FrontalWiper.cpp  Shooter.cpp  ThreeWayShooter.cpp
SpaceShooterGame/src/widgets/: GameHUD.cpp  MainMenuHUD.cpp
include/: EntryPoint.h
src/: EntryPoint.cpp
